<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Joseph Ananda Sugihdharma on 12/11/20 11:41 PM .
  ~ Copyright (c) 2020 . All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluePrimary"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:src="@drawable/applogo"
        app:layout_constraintBottom_toTopOf="@id/etUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        style="@style/inputAuth"
        android:background="@drawable/bg_input_edit"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/inputAuth"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_input_edit"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername" />

    <!--<com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:background="@drawable/shape_rectangle_yellow"
        android:textAllCaps="false"
        android:fontFamily="@font/rhtmedium"
        android:gravity="center"
        android:textAlignment="center"
        android:text="Login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>