<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Joseph Ananda Sugihdharma on 12/11/20 11:41 PM .
  ~ Copyright (c) 2020 . All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions_24"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_customer"
        android:icon="@drawable/ic_contacts_24"
        android:title="@string/title_customer" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_inventory_24"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/title_profile" />

</menu>