<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Joseph Ananda Sugihdharma on 12/11/20 11:41 PM .
  ~ Copyright (c) 2020 . All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluePrimary"
    android:padding="30dp"
    tools:context=".ui.AddProductActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_yellow_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/rhdbold"
        android:text="Add Product"
        android:textColor="@color/yellowPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddProduct">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rhdbold"
            android:text="Product Name"
            android:textColor="@color/yellowPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etProductName"
            style="@style/inputRegular"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input_edit"
            android:hint="Product Name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/rhdbold"
            android:text="Product Price"
            android:textColor="@color/yellowPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etProductPrice"
            style="@style/inputRegular"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input_edit"
            android:hint="Price"
            android:importantForAutofill="no"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_yellow"
        android:fontFamily="@font/rhtmedium"
        android:gravity="center"
        android:text="Add Product"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>